Move DSL class loading under core/dsl, de-duplicate class definition, and name the classify branches
Three pieces of DSL-internals cleanup. No behaviour change.

core/classloader held only DSL types, two of which say so in their names, and
nothing outside the DSL and rule world imported it. It is now
core/dsl/classloader. Catalog moves to core/dsl instead: a rule-file taxonomy is
not a class-loading concern, and it is the package's most-used type, mostly as a
RuleKey component in dsl-debugging. Nothing names this package in a string
literal, a FreeMarker template or an SPI file, so the compiler catches every
reference; ClassLoaderGc builds its unload-probe resource path from
UnloadProbePayload.class.getName() rather than a constant, so it follows the move.

Three copies of "define this generated class into the right loader" -- MAL's and
LAL's generators and MeterSystem -- collapse into a static
BytecodeClassDefiner.define. It lives on the interface rather than in a class of
its own because the whole decision is whether the loader implements that
interface; a second similarly-named type in the same package would be one concept
with two names. The JDK 17 --add-opens rationale, previously restated in four
places, now has one home and the other three point at it. MeterSystem's
multi-catch drops | IOException, which define() wraps into CannotCompileException
-- already an arm of the same catch, so the rollback and UnexpectedException wrap
are unchanged. That arm was unreachable regardless: CtClass.toBytecode() writes to
a ByteArrayOutputStream whose close() is a documented no-op, so the checked
exception is a declaration artefact.

Three of the four copies of the SW_DYNAMIC_CLASS_ENGINE_DEBUG dump-directory
lookup become DslGeneratedFileWriter.resolveClassDumpDir. OAL keeps its own: its
openEngineDebug flag is settable independently of the environment variable and two
tests call setOpenEngineDebug(true), which the shared resolver cannot express
without a second variant i